--- a/README.org
+++ b/README.org
@@ -1,47 +1,57 @@
-* Sumario/Sumary
+* Objetivo do projeto
 
+Techday foi um concurso realizado pela plataforma educadional [[https://www.dio.me/][dio.me]] em parceria com o Carrefour com o objetivo de recrutar novos  
+funcionários. Esse repositório foi elaborado para a minha partipação no concurso. O objetivo foi criar um site usando duas api fornecidas pelos realizadores do 
+concurso. ATENÇÃO: dependendo da data que você estiver vizualizando as apis pode ocorrer de terem sido desativadas, dependendo das configurações do seu navegador elas tambem não poderão funcionar. Para resolver isso recomendo o plugin Moesif Origin & CORS Changer ou o equivalente.
 
-* PT-BR
-
-Techday foi um concurso realizado pela plataforma educadional [[https://www.dio.me/][dio.me]] em parceria com o Carrefour com o objetivo de recrutar novos  funcionarios. Esse repositorio foi feito para a minha partipação nesse concruso. o objetivo foi criar um site usando duas api fornecidas pelos realizadores do concurso. ATENÇÃO dependendo data que você estiver olhando as apis podem derem sidos desativadas.
-
-A primeira é responsavel por procurar lojas nas proximidades tendo como argumento um CEP aqui representado por 00000000:
+A primeira api é responsável por procurar lojas nas proximidades, tendo como argumento um CEP aqui representado por 00000000:
 
 #+begin_src js
 https://mercado.carrefour.com.br/api/checkout/pub/regions?country=BRA&postalCode=00000000
 #+end_src
 
-A segundo retornas os itens dispoviveis em uma loja tendo como argumento o id da loja dejada, tal id pode ser obtido ultilizando a api anterior, apenas um detalhe a para caso você venha notar alguns bugs a api ira retornar uma lista independentemento do valor para o id colocado funcionando mesmo com um valor vazio, abaixo a api, foi ultilizado XXXXXXXXXXXX para representar o id:
+A segunda vai retornar os itens disponíveis em uma loja tendo como argumento o id da loja desejada, tal id pode ser obtido utilizando a api anterior. Um 
+detalhe para se acaso você  notar alguns bugs a api irá retornar  a uma lista, independente do valor para o id colocado, funcionando mesmo com um valor 
+vazio, abaixo a api, foi ultilizado XXXXXXXXXXXX para representar o id:
 
 #+begin_src js
 https://mercado.carrefour.com.br/api/catalog_system/pub/products/search?fq=XXXXXXXXXXXX
 #+end_src
 
-** Introudução
-Compras de mercado um momento de tensão no bolso para muitos de nos brasileiros algumas vezes principalmente quando você essa guardando as compras e nota que esqueceu de comprar a farinha do bolo de aniversario do seu irmão, falo por experiencia propria. Para eliminar essas complicações eu criei a aplicação web Carrefour checklist, uma ferramenta que premite a criação de listas de compras com preços atualizados, salvar essas listas para momentos futuros assim como compartilhá-la.
+** Tecnologias utilizadas
 
-** Tecnologias usadas
-
-Para a criação dessa aplicação ultilizei principalmente 2 frameworks e uma biblioteca de icones chamada react-icons.
+Para a criação dessa aplicação utilizei principalmente 2 frameworks e uma biblioteca de ícones chamada react-icons.
 
 *** nextJs
 
-O primeiro foi o nextJs o auto intitulado framework react para produção, ele foi selecionado por possuir todos os recursos do React com o diferencial de construir nativamente paginas optimizadas para SEO o que faz o site ser melhor rankiado pelos mecanismos de busca como Google, Bing e DuckDuckGo, aqui temos uma comparação entre os codigos gerados pelos frameworkes {mostra o slide} como pode ver o codigo do react possui poucas linhas diferentemento do site feito com o next essa diferença faz com que sites usando react sejam mais dificies de serem analizados pelos mecanismos de busca. 
+O primeiro foi o nextJs o auto intitulado framework react para produção, ele foi selecionado por possuir todos os recursos do React com o diferencial de 
+construir nativamente páginas optimizadas para SEO o que faz com que o site seja melhor rankiado pelos mecanismos de busca como Google, Bing e DuckDuckGo. Aqui temos uma comparação entre os códigos gerados pelos frameworkes {mostra o slide} como você pode ver o código do react possui poucas linhas. 
 
 *** tailwind
 
-Para realizar a estilização do site ultilizei o frameworkTailind CSS um framework similar ao Boostrap porem focado em ultilidades ao inveis de componentes tronando-o muito mais flexivel.
+Para realizar a estilização do site utilizei o frameworkTailind CSS um framework similar ao Boostrap porém focado em utilidades ao invés de componentes 
+tornando-o muito mais flexível.
 
 *** React icons
 
-Uma biblioteca que reune icones de diversos estilos
+Uma biblioteca que reúne ícones de diversos estilos
 
 ** Estrutura do site
 
-O website possui foi construido usando 3 paginas 
+O website é constituído por 3 páginas 
 
 *** Index
 
+A página inicial da aplicação, nela estão localizados os componentes modalStores (responsáveis pela busca de lojas) e SearchProducts componente que 
+renderiza os produtos assim como realiza sua busca.
+
+*** Carrinho
+
+Página que pode ser acessada clicando no ícone do carrinho na página index, aqui podemos ver os itens selecionados na página anterior, editarmos sua quantidade, na parte inferior da página temos 2 botões um para salvar a lista e o outro para copiar a lista para a area de transferência.
+
+*** Histórico 
+
+Nessa página podemos ver as listas salvas anteriormente assim como excluí-las ou vê-las no carrinho
 
 
 
